--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.13.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.548.0",
+    "rc-slider": "^11.1.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
