--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.1",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.548.0",
     "rc-slider": "^11.1.9",
     "react": "^19.2.0",
